# pytest-runbot-autotags

./: .gitignore  pyproject.toml
src/: pytest_runbot_autotags.py
